rust/macros/tests/invalid/target/debug/deps/only_comma-3b802a7e2021249e.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/only_comma-3b802a7e2021249e.d: only_comma.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libonly_comma-3b802a7e2021249e.rmeta: only_comma.rs Cargo.toml

only_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
